--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,9 +1,10 @@
 .header-wrapper {
-    position: sticky;
+    position: absolute;
     top: 0;
+    left: 0;
+    right: 0;
     z-index: 100;
-    background-color: #fff;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+    background-color: transparent;
 }
 
 .header-main {
@@ -58,7 +59,7 @@
 .hamburger-line {
     display: block;
     height: 2px;
-    background-color: rgb(92, 92, 92);
+    background-color: #fff;
     border-radius: 2px;
 }
 
